<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">E Waste Collector</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_ITEM_TYPE">Item Type</string>
    <string name="label_ITEM_QUANTITY">Quantity</string>
    <string name="label_ITEM_DONE">Done</string>
    <string name="label_ITEMS_PLEDGED">Items Pledged till now</string>
    <string name="action_settings">Settings</string>
    <string name="aboutInitiative_desc">Be a part of the \'Clean India\' mission by contributing your E-Waste for scientific recycling.</string>
    <string name="collectionSchedules_temporaryDesc">Once the collection kiosks are scheduled it will be displayed here</string>
    <string name="title_activity_add_to_inventory">Pledge your E-waste</string>
    <string name="title_activity_about_initiative">About this initiative</string>
    <string name="title_activity_collection_schedules">CollectionSchedulesActivity</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_inventory_items">Personal e-waste pledge</string>
    <string name="ITEM_INVENTORY_TYPE_CB">Choose the E-Waste items you would want to bring in to a Mobile Collection point</string>
    <string name="ITEM_INVENTORY_CB1">Pencil battery</string>
    <string name="ITEM_INVENTORY_CB2">Wires</string>
    <string name="ITEM_INVENTORY_CB3">Mobile Phone/MP3 Players</string>
    <string name="ITEM_INVENTORY_CB4">Modems/Routers/Radio</string>
    <string name="ITEM_INVENTORY_CB5">Keyboard/Mouse</string>
    <string name="ITEM_INVENTORY_CB6">Monitor/Displays/TV</string>
    <string name="ITEM_INVENTORY_CB7">Refrigerator/Washing Machine</string>
    <string name="ITEM_INVENTORY_DONE_BTN">Update items</string>
</resources>