<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background"
    tools:context="com.anue7.ewastecollector.activity.InventoryItemsActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:id="@+id/tableLayout">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/checkBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:onClick="onCheckboxClick"
                    android:tag="qty1"
                    android:text="@string/ITEM_INVENTORY_CB1" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:maxLength="2"
                    android:id="@+id/qty1"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:onClick="onCheckboxClick"
                    android:tag="qty2"
                    android:text="@string/ITEM_INVENTORY_CB2" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/qty2"
                    android:maxLength="2"
                    android:layout_column="1" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:onClick="onCheckboxClick"
                    android:tag="qty3"
                    android:text="@string/ITEM_INVENTORY_CB3" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/qty3"
                    android:maxLength="2"
                    android:layout_column="1" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/checkBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:onClick="onCheckboxClick"
                    android:tag="qty4"
                    android:text="@string/ITEM_INVENTORY_CB4" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:maxLength="2"
                    android:id="@+id/qty4"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/checkBox5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:tag="qty5"
                    android:onClick="onCheckboxClick"
                    android:text="@string/ITEM_INVENTORY_CB5" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:maxLength="2"
                    android:id="@+id/qty5"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/checkBox6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:onClick="onCheckboxClick"
                    android:tag="qty6"
                    android:text="@string/ITEM_INVENTORY_CB6" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:maxLength="2"
                    android:id="@+id/qty6"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/checkBox7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:tag="qty7"
                    android:onClick="onCheckboxClick"
                    android:text="@string/ITEM_INVENTORY_CB7" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:maxLength="2"
                    android:id="@+id/qty7"
                    android:layout_column="1" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            </TableRow>
        </TableLayout>
    </RelativeLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ITEM_INVENTORY_DONE_BTN"
            android:id="@+id/doneButton"
            android:layout_margin="20dp"
            android:background="@color/done_button_background"
            android:onClick="doneUpdatingItems"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_below="@+id/relativeLayout"
            android:layout_alignRight="@+id/relativeLayout"
            android:layout_alignEnd="@+id/relativeLayout" />

</RelativeLayout>
